--- a/public/styles/HomePageStyles.css
+++ b/public/styles/HomePageStyles.css
@@ -3,17 +3,15 @@
     position: absolute;
     height: 3800px;
     background-color: rgb(255, 255, 255);
-    left: 0px;
-    width: 100%;
+    width: 100vw;
     top: 40px;
 }
 
 .startBackground {
     position: relative;
     top: -27px;
-    left: 0px;
+    width: 100vw;
     height: 626px;
-    right: 0px;
     margin: 0;
     padding: 0;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
@@ -59,7 +57,7 @@
     top: 0px;
     text-align: center;
     line-height: 1.55em;
-    z-index: 9999;
+    z-index: 9998;
 }
 
 .startSubText {
@@ -119,9 +117,8 @@
     flex-direction: flow;
     justify-content: space-between;
     top: 650px;
-    left: 237px;
-    right: 237px;
-    height: 300px;
+    width: 1500px;
+    left: calc(50% - 750px);
     background-color: rgba(28, 165, 119, 0);
 }
 
@@ -136,7 +133,6 @@
     border-width: 1px;
     border-color: rgb(225, 225, 225);
     border-bottom-width: 1px;
-    border-bottom-color: rgb(225, 225, 225);
     color: rgb(63, 63, 63);
     z-index: 3;
     transition: all .08s ease-out;
@@ -144,12 +140,40 @@
 }
 
 .informationButton:hover {
-    transform: scale(1.01);
-    border-bottom-color: rgb(163, 163, 163);
+    transform: scale(1.015);
+    border-bottom-color: rgb(190, 190, 190);
     box-shadow: 0 10px 25px -15px rgb(148, 148, 148);
     transition: all .08s ease-out;
 }
 
+
+.informationButtonText {
+    position: absolute;
+    font-size: 95px;
+    top: -43px;
+    left: 40px;
+    display: inline-block;
+}
+
+.informationButtonExplaination {
+    position: absolute;
+    font-size: 27px;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 200px;
+    top: 23px;
+    left: 180px;
+    text-align: left;
+    font-weight: 400;
+}
+
+.standardModelsExplaination {
+    left: 165px;
+}
+
+.customModelsExplaination {
+    top: 40px;
+    left: 170px;
+}
 
 /* nationality amount button */
 
@@ -301,10 +325,11 @@
 
 .aboutBox {
     position: absolute;
-    top: 46vw;
-    left: 12.75vw;
-    right: 12.75vw;
-    height: 50px;
+    top: 880px;
+    left: calc(50% - 725px);
+    right: 100px;
+    height: 700px;
+    width: 1435px;
     background-color: transparent;
     border-top-style: solid;
     border-top-width: 2px;
@@ -356,8 +381,8 @@
 
 .aboutSectionTitle {
     position: relative;
-    left: 32.5vw;
-    padding-top: 3vw;
+    left: calc(50% - 80px);
+    padding-top: 20px;
     font-size: 50px;
     font-weight: 600;
     color: rgb(50, 50, 50);
@@ -367,16 +392,16 @@
 
 .aboutMotivationBox {
     position: absolute;
-    top: 11vw;
-    left: 23.15vw;
-    width: 24vw;
-    height: 24vw;
+    top: 200px;
+    left: calc(50% - 250px);
+    width: 450px;
+    height: 450px;
     border: none;
-    border-radius: 0.3vw;
-    border: solid rgb(226, 231, 255) 0.1vw;
-    padding: 2vw;
+    border-radius: 5px;
+    border: solid rgb(226, 231, 255) 1px;
+    padding: 30px;
     z-index: 3;
-    box-shadow: 0 0 2vw rgba(12, 64, 160, 0.15);
+    box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -384,10 +409,7 @@
 }
 
 .aboutMotivationBox:hover {
-    top: calc(11vw - 0.8vw);
-    left: calc(23.15vw - 0.8vw);
-    width: calc(24vw + 1.6vw);
-    height: calc(24vw + 1.6vw);
+    transform: scale(1.05);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -397,16 +419,16 @@
 
 .aboutProjectBox {
     position: absolute;
-    top: 24vw;
-    left: -7vw;
-    width: 24vw;
-    height: 24vw;
+    top: 450px;
+    left: calc(50% - 250px - 550px);
+    width: 450px;
+    height: 450px;
     border: none;
-    border-radius: 0.3vw;
-    border: solid rgb(226, 231, 255) 0.1vw;
-    padding: 2vw;
+    border-radius: 5px;
+    border: solid rgb(226, 231, 255) 1px;
+    padding: 30px;
     z-index: 3;
-    box-shadow: 0 0 2vw rgba(12, 64, 160, 0.15);
+    box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -414,10 +436,7 @@
 }
 
 .aboutProjectBox:hover {
-    top: calc(24vw - 0.8vw);
-    left: calc(-7vw - 0.8vw);
-    width: calc(24vw + 1.6vw);
-    height: calc(24vw + 1.6vw);
+    transform: scale(1.05);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -426,16 +445,15 @@
 
 .aboutUsBox {
     position: absolute;
-    top: 24vw;
-    right: -7vw;
-    width: 24vw;
-    height: 24vw;
-    border: none;
-    border-radius: 0.3vw;
-    border: solid rgb(226, 231, 255) 0.1vw;
-    padding: 2vw;
+    top: 450px;
+    left: calc(50% - 250px + 550px);
+    width: 450px;
+    height: 450px;
+    border-radius: 5px;
+    border: solid rgb(226, 231, 255) 1px;
+    padding: 30px;
     z-index: 3;
-    box-shadow: 0 0 2vw rgba(12, 64, 160, 0.15);
+    box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -443,10 +461,7 @@
 }
 
 .aboutUsBox:hover {
-    top: calc(24vw - 0.8vw);
-    right: calc(-7vw - 0.8vw);
-    width: calc(24vw + 1.6vw);
-    height: calc(24vw + 1.6vw);
+    transform: scale(1.05);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -464,23 +479,20 @@
 .aboutSubTitle {
     position: relative;
     color: rgb(56, 56, 56);
-    top: -2vw;
+    top: -25px;
+    left: 2%;
 }
 
 .aboutText {
     position: relative;
-    top: -2.5vw;
-    left: calc(50% - 12.25vw);
-    font-size: 0.95vw;
+    top: -30px;
+    left: calc(50% - 225px);
+    font-size: 17px;
     font-weight: 400;
     color: rgb(56, 56, 56);
     text-align: justify;
-    line-height: 1.8vw;
-    width: 24.5vw;
-}
-
-.aboutPadding {
-    padding-bottom: 4vw;
+    line-height: 35px;
+    width: 450px;
 }
 
 .aboutButtonBox {
