--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -19,6 +19,6 @@ body {
     width: 100%;
     top: 0px;
     height: 100vh;
-    overflow-x: scroll;
+    overflow-x: hidden;
     min-width: 1000px;
 }
