--- a/public/styles/HomePageStyles.css
+++ b/public/styles/HomePageStyles.css
@@ -3,7 +3,8 @@
     position: absolute;
     height: 3800px;
     background-color: rgb(255, 255, 255);
-    width: 100vw;
+    left: 0px;
+    width: 100%;
     top: 40px;
 }
 
