--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -2,23 +2,19 @@
 html {
     scroll-behavior: smooth;
     font-family: 'Source Sans Pro', sans-serif;
-    width: 100%;
+    width: auto;
     top: 0px;
     bottom: 0px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    padding: 0px;
+    margin: 0px;
 }
 
 
 body {
+    overflow-x: scroll;
     position: absolute;
-    background-color: rgb(255, 255, 255);
-    font-family: 'Source Sans Pro', sans-serif;
-    margin: 0;
-    padding: 0;
-    left: 0px;
     width: 100%;
-    top: 0px;
-    height: 100vh;
-    overflow-x: hidden;
-    min-width: 1000px;
+    padding: 0px;
+    margin: 0px;
 }
