--- a/public/styles/FooterBoxStyles.css
+++ b/public/styles/FooterBoxStyles.css
@@ -3,7 +3,7 @@
     position: absolute;
     bottom: 0px;
     left: 0px;
-    width: 100%;
+    width: 100vw;
     height: 280px;
     z-index: 4;
     /*background-color: rgb(63, 63, 63);*/
