--- a/public/styles/HomePageStyles.css
+++ b/public/styles/HomePageStyles.css
@@ -2,16 +2,15 @@
 .homePageBox {
     position: absolute;
     height: 3800px;
-    background-color: rgb(255, 255, 255);
-    left: 0px;
-    width: 100%;
+    background-color: rgba(241, 232, 207, 0);
+    width: 100vw;
     top: 40px;
 }
 
 .startBackground {
     position: relative;
     top: -27px;
-    width: 100vw;
+    width: 100%;
     height: 626px;
     margin: 0;
     padding: 0;
@@ -117,7 +116,7 @@
     display: flex;
     flex-direction: flow;
     justify-content: space-between;
-    top: 650px;
+    top: 665px;
     width: 1500px;
     left: calc(50% - 750px);
     background-color: rgba(28, 165, 119, 0);
@@ -327,11 +326,10 @@
 .aboutBox {
     position: absolute;
     top: 880px;
-    left: calc(50% - 725px);
-    right: 100px;
-    height: 700px;
-    width: 1435px;
-    background-color: transparent;
+    left: calc(50vw - 750px);
+    height: 920px;
+    width: 1500px;
+    background-color: rgba(233, 252, 236, 0);
     border-top-style: solid;
     border-top-width: 2px;
     border-top-color: rgb(235, 235, 235);
@@ -382,8 +380,8 @@
 
 .aboutSectionTitle {
     position: relative;
-    left: calc(50% - 80px);
-    padding-top: 20px;
+    left: calc(50% - 70px);
+    padding-top: 40px;
     font-size: 50px;
     font-weight: 600;
     color: rgb(50, 50, 50);
@@ -394,9 +392,9 @@
 .aboutMotivationBox {
     position: absolute;
     top: 200px;
-    left: calc(50% - 250px);
-    width: 450px;
-    height: 450px;
+    left: calc(50% - 225px);
+    width: 400px;
+    height: 400px;
     border: none;
     border-radius: 5px;
     border: solid rgb(226, 231, 255) 1px;
@@ -421,9 +419,9 @@
 .aboutProjectBox {
     position: absolute;
     top: 450px;
-    left: calc(50% - 250px - 550px);
-    width: 450px;
-    height: 450px;
+    left: calc(50% - 710px);
+    width: 400px;
+    height: 400px;
     border: none;
     border-radius: 5px;
     border: solid rgb(226, 231, 255) 1px;
@@ -447,9 +445,9 @@
 .aboutUsBox {
     position: absolute;
     top: 450px;
-    left: calc(50% - 250px + 550px);
-    width: 450px;
-    height: 450px;
+    left: calc(50% + 260px);
+    width: 400px;
+    height: 400px;
     border-radius: 5px;
     border: solid rgb(226, 231, 255) 1px;
     padding: 30px;
@@ -487,14 +485,13 @@
 .aboutText {
     position: relative;
     top: -30px;
-    left: calc(50% - 225px);
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 400;
     color: rgb(56, 56, 56);
     text-align: justify;
-    line-height: 35px;
-    width: 450px;
+    line-height: 30px;
 }
+
 
 .aboutButtonBox {
     position: absolute;
@@ -579,16 +576,18 @@
 
 .analyticsIllustration {
     position: absolute;
-    top: 7.5vw;
-    left: -1vw;
-    height: 13vw;
+    top: 160px;
+    left: 120px;
+    right: 100px;
+    height: 220px;
 }
 
 .peopleIllustration {
     position: absolute;
-    top: 8.3vw;
-    right: -1.15vw;
-    height: 12vw;
+    top: 185px;
+    left: 1100px;
+    right: 100px;
+    height: 200px;
 }
 
 
