--- a/public/styles/MediaQueries.css
+++ b/public/styles/MediaQueries.css
@@ -42,7 +42,7 @@
     .informationButtonBox {
         left: calc(50% - 550px);
         width: 1100px;
-        top: 565px;
+        top: 580px;
     }
 
     .informationButton {
@@ -74,6 +74,158 @@
     .customModelsExplaination {
         top: 30px;
         left: 135px;
+    }
+
+    /* ABOUT SECTION */
+
+    .aboutBox {
+        position: absolute;
+        top: 760px;
+        left: calc(50% - 750px);
+        height: 700px;
+        width: 1500px;
+        background-color: transparent;
+        border-top-style: solid;
+        border-top-width: 2px;
+        border-top-color: rgb(235, 235, 235);
+    }
+    
+    .slideBox {
+        position: absolute;
+        top: -40px;
+        left: 0px;
+        width: 100%;
+        height: 700px;
+    }
+
+    .aboutSectionTitle {
+        position: relative;
+        left: calc(50% - 80px);
+        padding-top: 20px;
+        font-size: 50px;
+        font-weight: 600;
+        color: rgb(50, 50, 50);
+        display: inline-block;
+    }
+    
+    
+    .aboutMotivationBox {
+        position: absolute;
+        top: 200px;
+        left: calc(50% - 185px);
+        width: 320px;
+        height: 475px;
+        border: none;
+        border-radius: 5px;
+        border: solid rgb(226, 231, 255) 1px;
+        padding: 30px;
+        z-index: 3;
+        box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
+        -moz-transition: all .15s ease-out;
+        -o-transition: all .15s ease-out;
+        -webkit-transition: all .15s ease-out;
+        transition: all .15s ease-out;
+    }
+    
+    .aboutMotivationBox:hover {
+        transform: scale(1.05);
+        -moz-transition: all .15s ease-out;
+        -o-transition: all .15s ease-out;
+        -webkit-transition: all .15s ease-out;
+        transition: all .15s ease-out;
+    }
+    
+    
+    .aboutProjectBox {
+        position: absolute;
+        top: 450px;
+        left: calc(50% - 595px);
+        width: 320px;
+        height: 475px;
+        border: none;
+        border-radius: 5px;
+        border: solid rgb(226, 231, 255) 1px;
+        padding: 30px;
+        z-index: 3;
+        box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
+        -moz-transition: all .15s ease-out;
+        -o-transition: all .15s ease-out;
+        -webkit-transition: all .15s ease-out;
+        transition: all .15s ease-out;
+    }
+    
+    .aboutProjectBox:hover {
+        transform: scale(1.05);
+        -moz-transition: all .15s ease-out;
+        -o-transition: all .15s ease-out;
+        -webkit-transition: all .15s ease-out;
+        transition: all .15s ease-out;
+    }
+    
+    .aboutUsBox {
+        position: absolute;
+        top: 450px;
+        left: calc(50% + 225px);
+        width: 320px;
+        height: 475px;
+        border-radius: 5px;
+        border: solid rgb(226, 231, 255) 1px;
+        padding: 30px;
+        z-index: 3;
+        box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
+        -moz-transition: all .15s ease-out;
+        -o-transition: all .15s ease-out;
+        -webkit-transition: all .15s ease-out;
+        transition: all .15s ease-out;
+    }
+    
+    .aboutUsBox:hover {
+        transform: scale(1.05);
+        -moz-transition: all .15s ease-out;
+        -o-transition: all .15s ease-out;
+        -webkit-transition: all .15s ease-out;
+        transition: all .15s ease-out;
+    }
+    
+    
+    .aboutSponsorButton {
+        position: absolute;
+        top: 200px;
+        height: 4px;
+    }
+    
+    
+    .aboutSubTitle {
+        position: relative;
+        color: rgb(56, 56, 56);
+        top: -25px;
+        left: 2%;
+    }
+    
+    .aboutText {
+        position: relative;
+        top: -30px;
+        font-size: 15px;
+        font-weight: 400;
+        color: rgb(56, 56, 56);
+        text-align: justify;
+        line-height: 30px;
+    }
+
+    .analyticsIllustration {
+        position: absolute;
+        top: 175px;
+        left: 210px;
+        right: 100px;
+        height: 200px;
+    }
+    
+    .peopleIllustration {
+        position: absolute;
+        top: 185px;
+        left: 1030px;
+        right: 100px;
+        height: 190px;
     }
 }
 
@@ -329,7 +481,7 @@
 
     .startBox {
         position: absolute;
-        top: 20px;
+        top: 35px;
         width: 330px;
         left: calc(50vw - 165px);
         height: 250px;
