rm unnecessary css objects, moved media queries into seperate files

--- a/public/styles/HomePageStyles.css
+++ b/public/styles/HomePageStyles.css
@@ -407,15 +407,6 @@
     transition: all .15s ease-out;
 }
 
-.aboutMotivationBox:hover {
-    transform: scale(1.05);
-    -moz-transition: all .15s ease-out;
-    -o-transition: all .15s ease-out;
-    -webkit-transition: all .15s ease-out;
-    transition: all .15s ease-out;
-}
-
-
 .aboutProjectBox {
     position: absolute;
     top: 450px;
@@ -428,14 +419,6 @@
     padding: 30px;
     z-index: 3;
     box-shadow: 0 0 30px rgba(12, 64, 160, 0.15);
-    -moz-transition: all .15s ease-out;
-    -o-transition: all .15s ease-out;
-    -webkit-transition: all .15s ease-out;
-    transition: all .15s ease-out;
-}
-
-.aboutProjectBox:hover {
-    transform: scale(1.05);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
     -webkit-transition: all .15s ease-out;
@@ -459,7 +442,7 @@
     transition: all .15s ease-out;
 }
 
-.aboutUsBox:hover {
+.aboutSubBox:hover {
     transform: scale(1.05);
     -moz-transition: all .15s ease-out;
     -o-transition: all .15s ease-out;
