--- a/public/styles/mediaQueries/sub1100px.css
+++ b/public/styles/mediaQueries/sub1100px.css
@@ -1,3 +1,5 @@
+
+
 @media (max-width: 1100px) {
     .startBackground {
         height: 400px;
@@ -27,7 +29,7 @@
         width: 70vw;
         height: 165px;
         background-color: rgba(106, 165, 28, 0);
-        top: 410px;
+        top: 415px;
         left: 14vw;
     }
 
@@ -152,5 +154,18 @@
         left: 73px;
         padding: 0px;
         width: 100px;
+    }
+
+    .aboutBox {
+        top: 222px;
+    }
+}
+
+
+@media (max-width: 950px) {
+    .earthPinIllustration {
+        height: 230px;
+        top: 143px;
+        right: 2vw;
     }
 }
