--- a/public/styles/mediaQueries/sub1650px.css
+++ b/public/styles/mediaQueries/sub1650px.css
@@ -81,7 +81,7 @@
     .aboutBox {
         position: absolute;
         top: 760px;
-        left: calc(50% - 550px);
+        left: calc(50% - 555px);
         height: 700px;
         width: 1100px;
         background-color: transparent;
@@ -114,7 +114,7 @@
         top: 200px;
         left: calc(50% - 185px);
         width: 320px;
-        height: 475px;
+        height: 500px;
         border: none;
         border-radius: 5px;
         border: solid rgb(226, 231, 255) 1px;
@@ -132,7 +132,7 @@
         top: 450px;
         left: calc(50% - 595px);
         width: 320px;
-        height: 475px;
+        height: 500px;
         border: none;
         border-radius: 5px;
         border: solid rgb(226, 231, 255) 1px;
@@ -150,7 +150,7 @@
         top: 450px;
         left: calc(50% + 225px);
         width: 320px;
-        height: 475px;
+        height: 500px;
         border-radius: 5px;
         border: solid rgb(226, 231, 255) 1px;
         padding: 30px;
@@ -193,7 +193,7 @@
         right: 100px;
         height: 200px;
     }
-    
+
     .peopleIllustration {
         position: absolute;
         top: 190px;
@@ -201,4 +201,102 @@
         right: 100px;
         height: 190px;
     }
+
+    /* HOW IT WORKS BOX */
+    .explainationBox {
+        position: relative;
+        top: 1250px;
+        right: 100px;
+        height: 1000px;
+        border-top: 2px solid rgb(235, 235, 235);
+        left: calc(50% - 555px);
+        width: 1100px;
+    }
+    
+    .explainationBoxTitle {
+        position: relative;
+        left: calc(50% - 75px);
+        padding-top: 60px;
+        font-size: 50px;
+        font-weight: 600;
+        color: rgb(50, 50, 50);
+        display: inline-block;
+    }
+
+    .explainationText {
+        position: relative;
+        top: -10px;
+        left: 0px;
+        font-size: 15px;
+        font-weight: 400;
+        color: rgb(56, 56, 56);
+        text-align: justify;
+        line-height: 30px;
+        width: 100%;
+    }
+
+    .howToClassifyBox {
+        position: absolute;
+        top: 215px;
+        left: 0px;
+        padding-right: 55px;
+        width: 495px;
+        height: 1050px;
+        bottom: 30px;
+        border-right: 2px solid rgb(235, 235, 235);
+        z-index: 1;
+    }
+    
+    .howToRequestBox {
+        position: absolute;
+        top: 215px;
+        right: 0px;
+        padding-left: 110px;
+        width: 495px;
+        height: 1050px;
+        bottom: 30px;
+    }
+    
+    .inputTableImage {
+        position: relative;
+        left: calc(50% - 200px);
+        border: solid rgb(215, 222, 255) 1px;
+        transition: all .15s ease-out;
+        margin-bottom: 35px;
+        margin-top: 20px;
+    }
+    
+    .outputTableImage {
+        position: relative;
+        left: calc(50% - 200px);
+        border: solid rgb(215, 222, 255) 1px;
+        margin-top: 20px;
+        transition: all .15s ease-out;
+    }
+    
+    .getStartedButton {
+        position: relative;
+        top: 90px;
+        left: 165px;
+    }
+    
+    .publishIllustration {
+        position: absolute;
+        top: 685px;
+        left: 95px;
+        height: 300px;
+    }
+
+    .explainationPoint {
+        position: relative;
+        top: -10px;
+        left: 20px;
+        font-size: 14px;
+        width: 440px;
+        padding: 10px;
+        margin-top: 20px;
+        border: 1px solid rgb(215, 222, 255);
+        transition: all .15s ease-out;
+    }
+    
 }
